@@ -805,7 +805,7 @@
 
 /* Constants */
 #define SPM_PAGESIZE 64
-#define RAMEND       0x7FF     /* Last On-Chip SRAM Location */
+#define RAMEND       0x8FF     /* Last On-Chip SRAM Location */
 #define XRAMEND      0
 #define E2END        0x3FF
 #define FLASHEND     0x7FFF
