@@ -802,7 +802,7 @@
 
 /* Constants */
 #define SPM_PAGESIZE 32
-#define RAMEND       0x1FF     /* Last On-Chip SRAM Location */
+#define RAMEND       0x2FF     /* Last On-Chip SRAM Location */
 #define XRAMEND      0
 #define E2END        0xFF
 #define FLASHEND     0xFFF
